# astronid-management-system

./: .gitignore  CMakeLists.txt  Cell.cpp  ConfigFile.cpp  README.md  Simulation.cpp  main.cpp  map  settings
include/: Cell.hpp  ConfigFile.hpp  Simulation.hpp
